--- a/webscraping_for_data.ipynb
+++ b/webscraping_for_data.ipynb
@@ -72,16 +72,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = []   # List to store the python data sets\n",
-    "\n",
     "for data_urls in data_sets: # Loopig through the data sets in found by the program \n",
     "    for data_url in data_urls:  # Extracting the individual urls \n",
     "        data_set = requests.get(data_url)   # getting the http response for the data\n",
     "        data_set = bs4.BeautifulSoup(data_set.text, \"html.parser\")  # Passing the data html \n",
+    "        file_name = data_url.split(\"/\")[-1]\n",
     "\n",
     "        datum = {    # Storing the data as a python dictionary \n",
     "            \"year\": [], # A column to store the year \n",
@@ -101,12 +100,10 @@
     "                    column_counter = 0  # Resetting the column indicating new row\n",
     "                else:\n",
     "                    tabular_entry = str(tabular_column).strip(\"<td>\").strip(\"</td>\")   # Retrieving data\n",
-    "                    datum[columns_names[column_counter]].append(tabular_entry)    # Adding the data to storage \n",
+    "                    datum[columns_names[column_counter]].append(float(tabular_entry))    # Adding the data to storage \n",
     "                    column_counter += 1 # Moving along one column\n",
     "                \n",
-    "        data.append(datum)\n",
-    "\n",
-    "        # pandas.DataFrame(datum).to_csv()\n"
+    "        pandas.DataFrame(datum).to_csv(\"\")\n"
    ]
   },
   {
@@ -118,41 +115,177 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'year': '-5246', 'd14c': '98.94', 'sig_d14c': '2.26'},\n",
-       " {'year': '-5247', 'd14c': '97.46', 'sig_d14c': '1.71'},\n",
-       " {'year': '-5247', 'd14c': '96.62', 'sig_d14c': '1.77'},\n",
-       " {'year': '-5251', 'd14c': '99.6', 'sig_d14c': '1.87'},\n",
-       " {'year': '-5396', 'd14c': '86.9', 'sig_d14c': '3.4'},\n",
-       " {'year': '-5400', 'd14c': '91.7', 'sig_d14c': '3'},\n",
-       " {'year': '-5381', 'd14c': '84.9', 'sig_d14c': '2.3'},\n",
-       " {'year': '-633', 'd14c': '-0.3', 'sig_d14c': '2.4'},\n",
-       " {'year': '-633', 'd14c': '2.4', 'sig_d14c': '2.3'},\n",
-       " {'year': '-7147', 'd14c': '82.91', 'sig_d14c': '2.95'},\n",
-       " {'year': '-7147', 'd14c': '83.17', 'sig_d14c': '1.92'},\n",
-       " {'year': '-7150', 'd14c': '84.33', 'sig_d14c': '2.47'},\n",
-       " {'year': '780', 'd14c': '-8.8', 'sig_d14c': '1.4'},\n",
-       " {'year': '780', 'd14c': '-12.9', 'sig_d14c': '1.6'},\n",
-       " {'year': '780', 'd14c': '-12.1', 'sig_d14c': '1.6'},\n",
-       " {'year': '780', 'd14c': '-11.6', 'sig_d14c': '2.3'},\n",
-       " {'year': '780', 'd14c': '-13.8', 'sig_d14c': '2.3'},\n",
-       " {'year': '780', 'd14c': '-12.4', 'sig_d14c': '2.3'},\n",
-       " {'year': '1000', 'd14c': '-15.19', 'sig_d14c': '2.40'},\n",
-       " {'year': '1000', 'd14c': '-13.64', 'sig_d14c': '2.36'}]"
+       "'Brehm21_AlpineLarch.csv'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data"
+    "data_sets[0][0].split(\"/\")[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function to_csv in module pandas.core.generic:\n",
+      "\n",
+      "to_csv(self, path_or_buf: 'FilePathOrBuffer[AnyStr] | None' = None, sep: 'str' = ',', na_rep: 'str' = '', float_format: 'str | None' = None, columns: 'Sequence[Hashable] | None' = None, header: 'bool_t | list[str]' = True, index: 'bool_t' = True, index_label: 'IndexLabel | None' = None, mode: 'str' = 'w', encoding: 'str | None' = None, compression: 'CompressionOptions' = 'infer', quoting: 'int | None' = None, quotechar: 'str' = '\"', line_terminator: 'str | None' = None, chunksize: 'int | None' = None, date_format: 'str | None' = None, doublequote: 'bool_t' = True, escapechar: 'str | None' = None, decimal: 'str' = '.', errors: 'str' = 'strict', storage_options: 'StorageOptions' = None) -> 'str | None'\n",
+      "    Write object to a comma-separated values (csv) file.\n",
+      "    \n",
+      "    Parameters\n",
+      "    ----------\n",
+      "    path_or_buf : str or file handle, default None\n",
+      "        File path or object, if None is provided the result is returned as\n",
+      "        a string.  If a non-binary file object is passed, it should be opened\n",
+      "        with `newline=''`, disabling universal newlines. If a binary\n",
+      "        file object is passed, `mode` might need to contain a `'b'`.\n",
+      "    \n",
+      "        .. versionchanged:: 1.2.0\n",
+      "    \n",
+      "           Support for binary file objects was introduced.\n",
+      "    \n",
+      "    sep : str, default ','\n",
+      "        String of length 1. Field delimiter for the output file.\n",
+      "    na_rep : str, default ''\n",
+      "        Missing data representation.\n",
+      "    float_format : str, default None\n",
+      "        Format string for floating point numbers.\n",
+      "    columns : sequence, optional\n",
+      "        Columns to write.\n",
+      "    header : bool or list of str, default True\n",
+      "        Write out the column names. If a list of strings is given it is\n",
+      "        assumed to be aliases for the column names.\n",
+      "    index : bool, default True\n",
+      "        Write row names (index).\n",
+      "    index_label : str or sequence, or False, default None\n",
+      "        Column label for index column(s) if desired. If None is given, and\n",
+      "        `header` and `index` are True, then the index names are used. A\n",
+      "        sequence should be given if the object uses MultiIndex. If\n",
+      "        False do not print fields for index names. Use index_label=False\n",
+      "        for easier importing in R.\n",
+      "    mode : str\n",
+      "        Python write mode, default 'w'.\n",
+      "    encoding : str, optional\n",
+      "        A string representing the encoding to use in the output file,\n",
+      "        defaults to 'utf-8'. `encoding` is not supported if `path_or_buf`\n",
+      "        is a non-binary file object.\n",
+      "    compression : str or dict, default 'infer'\n",
+      "        If str, represents compression mode. If dict, value at 'method' is\n",
+      "        the compression mode. Compression mode may be any of the following\n",
+      "        possible values: {'infer', 'gzip', 'bz2', 'zip', 'xz', None}. If\n",
+      "        compression mode is 'infer' and `path_or_buf` is path-like, then\n",
+      "        detect compression mode from the following extensions: '.gz',\n",
+      "        '.bz2', '.zip' or '.xz'. (otherwise no compression). If dict given\n",
+      "        and mode is one of {'zip', 'gzip', 'bz2'}, or inferred as\n",
+      "        one of the above, other entries passed as\n",
+      "        additional compression options.\n",
+      "    \n",
+      "        .. versionchanged:: 1.0.0\n",
+      "    \n",
+      "           May now be a dict with key 'method' as compression mode\n",
+      "           and other entries as additional compression options if\n",
+      "           compression mode is 'zip'.\n",
+      "    \n",
+      "        .. versionchanged:: 1.1.0\n",
+      "    \n",
+      "           Passing compression options as keys in dict is\n",
+      "           supported for compression modes 'gzip' and 'bz2'\n",
+      "           as well as 'zip'.\n",
+      "    \n",
+      "        .. versionchanged:: 1.2.0\n",
+      "    \n",
+      "            Compression is supported for binary file objects.\n",
+      "    \n",
+      "        .. versionchanged:: 1.2.0\n",
+      "    \n",
+      "            Previous versions forwarded dict entries for 'gzip' to\n",
+      "            `gzip.open` instead of `gzip.GzipFile` which prevented\n",
+      "            setting `mtime`.\n",
+      "    \n",
+      "    quoting : optional constant from csv module\n",
+      "        Defaults to csv.QUOTE_MINIMAL. If you have set a `float_format`\n",
+      "        then floats are converted to strings and thus csv.QUOTE_NONNUMERIC\n",
+      "        will treat them as non-numeric.\n",
+      "    quotechar : str, default '\\\"'\n",
+      "        String of length 1. Character used to quote fields.\n",
+      "    line_terminator : str, optional\n",
+      "        The newline character or character sequence to use in the output\n",
+      "        file. Defaults to `os.linesep`, which depends on the OS in which\n",
+      "        this method is called ('\\\\n' for linux, '\\\\r\\\\n' for Windows, i.e.).\n",
+      "    chunksize : int or None\n",
+      "        Rows to write at a time.\n",
+      "    date_format : str, default None\n",
+      "        Format string for datetime objects.\n",
+      "    doublequote : bool, default True\n",
+      "        Control quoting of `quotechar` inside a field.\n",
+      "    escapechar : str, default None\n",
+      "        String of length 1. Character used to escape `sep` and `quotechar`\n",
+      "        when appropriate.\n",
+      "    decimal : str, default '.'\n",
+      "        Character recognized as decimal separator. E.g. use ',' for\n",
+      "        European data.\n",
+      "    errors : str, default 'strict'\n",
+      "        Specifies how encoding and decoding errors are to be handled.\n",
+      "        See the errors argument for :func:`open` for a full list\n",
+      "        of options.\n",
+      "    \n",
+      "        .. versionadded:: 1.1.0\n",
+      "    \n",
+      "    storage_options : dict, optional\n",
+      "        Extra options that make sense for a particular storage connection, e.g.\n",
+      "        host, port, username, password, etc. For HTTP(S) URLs the key-value pairs\n",
+      "        are forwarded to ``urllib`` as header options. For other URLs (e.g.\n",
+      "        starting with \"s3://\", and \"gcs://\") the key-value pairs are forwarded to\n",
+      "        ``fsspec``. Please see ``fsspec`` and ``urllib`` for more details.\n",
+      "    \n",
+      "        .. versionadded:: 1.2.0\n",
+      "    \n",
+      "    Returns\n",
+      "    -------\n",
+      "    None or str\n",
+      "        If path_or_buf is None, returns the resulting csv format as a\n",
+      "        string. Otherwise returns None.\n",
+      "    \n",
+      "    See Also\n",
+      "    --------\n",
+      "    read_csv : Load a CSV file into a DataFrame.\n",
+      "    to_excel : Write DataFrame to an Excel file.\n",
+      "    \n",
+      "    Examples\n",
+      "    --------\n",
+      "    >>> df = pd.DataFrame({'name': ['Raphael', 'Donatello'],\n",
+      "    ...                    'mask': ['red', 'purple'],\n",
+      "    ...                    'weapon': ['sai', 'bo staff']})\n",
+      "    >>> df.to_csv(index=False)\n",
+      "    'name,mask,weapon\\nRaphael,red,sai\\nDonatello,purple,bo staff\\n'\n",
+      "    \n",
+      "    Create 'out.zip' containing 'out.csv'\n",
+      "    \n",
+      "    >>> compression_opts = dict(method='zip',\n",
+      "    ...                         archive_name='out.csv')  # doctest: +SKIP\n",
+      "    >>> df.to_csv('out.zip', index=False,\n",
+      "    ...           compression=compression_opts)  # doctest: +SKIP\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(pandas.DataFrame.to_csv)"
    ]
   }
  ],
