--- a/peak_hunting.ipynb
+++ b/peak_hunting.ipynb
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,8 +254,8 @@
     "    Returns:\n",
     "        The chi-squared of the simulated event given the EDC14 and the error in the chi-squared\n",
     "    \"\"\"\n",
-    "    chi_squared = (array(*event[\"DC14\"]) - EDC14) ** 2 / EDC14  # Calculates generalised chi squared\n",
-    "    chi_squared_error = 2 * array(*event[\"Sig_DC14\"])   # Error propagation of chi-sqaured \n",
+    "    chi_squared = (array([*event[\"DC14\"]]) - EDC14) ** 2 / EDC14  # Calculates generalised chi squared\n",
+    "    chi_squared_error = 2 * array([*event[\"Sig_DC14\"]])   # Error propagation of chi-sqaured \n",
     "    return chi_squared, chi_squared_error"
    ]
   },
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,33 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 90%|████████▉ | 179/200 [00:32<00:05,  3.73it/s]"
+      "100%|██████████| 200/200 [00:37<00:00,  5.29it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running production...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 500/500 [01:51<00:00,  4.48it/s]\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "array() takes from 1 to 5 positional arguments but 6 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-95-d80a69b0be49>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     29\u001b[0m                 \u001b[0mtheoretical_dc14\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel_obj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdc14\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mproduction_params\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m      \u001b[0;31m# Running the model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m                 \u001b[0mevent\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msimulate_error\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel_obj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata_error\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtheoretical_dc14\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# Running simulation\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 31\u001b[0;31m                 \u001b[0mchi_squared\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0merror\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrecover_event\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mevent\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtheoretical_dc14\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# getting shi\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     32\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m                 \u001b[0msimulations\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Data\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdatum_str\u001b[0m\u001b[0;34m)\u001b[0m           \u001b[0;31m# Storing the data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-94-4bfe725c69fc>\u001b[0m in \u001b[0;36mrecover_event\u001b[0;34m(event, EDC14)\u001b[0m\n\u001b[1;32m      9\u001b[0m     \"\"\"\n\u001b[1;32m     10\u001b[0m     \u001b[0mchi_squared\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mevent\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"DC14\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mEDC14\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m**\u001b[0m \u001b[0;36m2\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mEDC14\u001b[0m  \u001b[0;31m# Calculates generalised chi squared\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m     \u001b[0mchi_squared_error\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m2\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mevent\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Sig_DC14\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m   \u001b[0;31m# Error propagation of chi-sqaured\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mchi_squared\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mchi_squared_error\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: array() takes from 1 to 5 positional arguments but 6 were given"
      ]
     }
    ],
@@ -303,7 +329,8 @@
     "\n",
     "for model in test_models:   # Looping over the models \n",
     "    for datum in test_data: # Looping over the data\n",
-    "        datum_str = datum.split(\"/\")[-1]\n",
+    "        datum_str = datum.split(\"/\")[-1]    # Just storing the csv name not the whole adress path \n",
+    "        \n",
     "        print(  \n",
     "            f\"Current Model = {model} \\n\" +\n",
     "            f\"Current Datum = {datum_str}\"\n",
@@ -312,7 +339,7 @@
     "        model_obj = get_model(model, datum)    # Loading the model into RAM\n",
     "        production_params = get_production_function(model_obj)   # Getting the production function \n",
     "        model_obj.production = production   # Assigning the production function \n",
-    "        data_error = get_residual_distribution(model_obj, [production_params])    # Getting the error distribution of the data arround the production function\n",
+    "        data_error = get_residual_distribution(model_obj, [production_params])  # Getting error \n",
     "\n",
     "        for height in arange(0.1, 8.0, 0.1):   # Looping over a range of areas \n",
     "            for duration in arange(0.1, 8.0, 0.1):   # Looping over a range of durations\n",
