Walkig through the directory tree to retrieve the datasets and models

--- a/Julia ODEs/julia_odes.ipynb
+++ b/Julia ODEs/julia_odes.ipynb
@@ -19,6 +19,154 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/julia_odes.ipynb\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/plan.md\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/solver_profiles.csv\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/solver_profiles.pdf\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/5259BCE\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/5259BCE/NH/Brehm21_AlpineLarch.csv\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/5259BCE/NH/Brehm21_IrishOak.csv\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/5259BCE/NH/Brehm21_SibirianLarch.csv\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/5259BCE/NH/Brehm21_USABristlecone.csv\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/5259BCE/NH\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/5410BCE\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/5410BCE/NH/Miyake21_Bristlecone.csv\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/5410BCE/NH/Miyake21_Finland1.csv\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/5410BCE/NH/Miyake21_Finland2.csv\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/5410BCE/NH/Miyake21_Switzerland.csv\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/5410BCE/NH\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/660BCE\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/660BCE/NH/Sakurai20_CedarEw.csv\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/660BCE/NH/Sakurai20_CedarLw.csv\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/660BCE/NH\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/7176BCE\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/7176BCE/NH/Brehm21_AlpineLarch.csv\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/7176BCE/NH/Brehm21_GermanOak.csv\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/7176BCE/NH/Brehm21_USABristlecone.csv\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/7176BCE/NH\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/NH/Büntgen18_ALT01.csv\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/NH/Büntgen18_AUT02.csv\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/NH/Büntgen18_CAN06.csv\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/NH/Büntgen18_CHN01.csv\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/NH/Büntgen18_GER01.csv\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/NH/Büntgen18_GER07.csv\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/NH/Büntgen18_GRE02.csv\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/NH/Büntgen18_JAP01.csv\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/NH/Büntgen18_MON03.csv\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/NH/Büntgen18_MON09.csv\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/NH/Büntgen18_PAK04.csv\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/NH/Büntgen18_RUS04.csv\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/NH/Büntgen18_RUS15.csv\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/NH/Büntgen18_RUS17.csv\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/NH/Büntgen18_RUS20.csv\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/NH/Büntgen18_SUI01.csv\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/NH/Büntgen18_SWE02.csv\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/NH/Büntgen18_SWE05.csv\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/NH/Büntgen18_TIB01.csv\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/NH/Büntgen18_USA02.csv\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/NH/Büntgen18_USA11.csv\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/NH/Büntgen18_USA18.csv\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/NH/Miyake12_Cedar.csv\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/NH\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/SH/Büntgen18_DAR01.csv\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/SH/Büntgen18_DAR06.csv\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/SH/Büntgen18_DAR07.csv\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/SH/Büntgen18_PAT02.csv\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/SH/Büntgen18_PAT03.csv\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/SH/Büntgen18_TAS01.csv\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/SH\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/993AD\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/993AD/NH/Büntgen18_ALT02.csv\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/993AD/NH/Büntgen18_CHI01.csv\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/993AD/NH/Büntgen18_MON05.csv\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/993AD/NH/Büntgen18_SWE01.csv\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/993AD/NH/Büntgen18_SWE02.csv\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/993AD/NH/Büntgen18_SWE03.csv\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/993AD/NH/Büntgen18_SWE04.csv\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/993AD/NH\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/993AD/SH/Büntgen18_DAR01.csv\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/993AD/SH/Büntgen18_PAT03.csv\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/993AD/SH\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/models/Brehm21.hd5\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/models/Buntgen18.hd5\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/models/Guttler14.hd5\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/models/Miyake17.hd5\n",
+      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/models\n"
+     ]
+    }
+   ],
+   "source": [
+    "home_directory = pwd()  # Getting the current working directory \n",
+    "\n",
+    "for (root, dirs, files) in walkdir(pwd())\n",
+    "    if root \n",
+    "    for file in files\n",
+    "        file = string(root, \"/\", file)\n",
+    "        print(file, \"\\n\")\n",
+    "    end\n",
+    "    print(root, \"\\n\")\n",
+    "end\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### `get_derivative`: \n",
+    " - This function will loads the derivative function from a `.hd5` file. \n",
+    "     - Parameters:\n",
+    "         - `model: str` The name of the model that is to be used. \n",
+    "     - Returns:\n",
+    "         - `Function` The entire model is summarised by the derivative since it is an ode. So I want to return the derivative as a function of parameters. I have decided that the binning will automatically occur within this function based on the hemisphere loaded from the `.hd5` file. I need to check this against `ticktack`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function get_derivative(model_file_name::String)::Function\n",
+    "    local hd5 = h5open(model_file_name);                      # Opening the HDF5 file\n",
+    "    local F = hd5[\"fluxes\"][1:end, 1:end];              # Retrieving the flux matrix \n",
+    "    local P = hd5[\"production coefficients\"][1:end];    # Retrieving the production prjection \n",
+    "    local N = hd5[\"reservoir content\"][1:end, 1:end];   # The C14 reserviour contents \n",
+    "    close(hd5);                                         # Closing the file \n",
+    "\n",
+    "    local λ = Diagonal([log(2) / 5730 for i in 1:11]);          # Constructing the decay matrix\n",
+    "    local F = transpose(F) ./ N;                                      # The proportion flux\n",
+    "    local T = transpose(F) - Diagonal(vec(sum(F, dims=2))) - λ;# Construncting the transfer operator\n",
+    "\n",
+    "    function production(t, p):\n",
+    "        # Need to go to ticktack and get the simple_sinusoid function moved into this implementation\n",
+    "        return p[1] * (1 + p[2] * sin(2 * π / 11* t + p[4])) + p[5] * exp(- (p[6] * (t - p[7])) ^ 16); \n",
+    "    end\n",
+    "\n",
+    "    return function derivative(x, p, t)\n",
+    "        return vec(TO * x + production(t, p) * P);  \n",
+    "    end\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From here is the old version."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
