--- a/Julia ODEs/julia_odes.ipynb
+++ b/Julia ODEs/julia_odes.ipynb
@@ -19,103 +19,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/julia_odes.ipynb\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/plan.md\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/solver_profiles.csv\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/solver_profiles.pdf\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/5259BCE\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/5259BCE/NH/Brehm21_AlpineLarch.csv\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/5259BCE/NH/Brehm21_IrishOak.csv\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/5259BCE/NH/Brehm21_SibirianLarch.csv\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/5259BCE/NH/Brehm21_USABristlecone.csv\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/5259BCE/NH\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/5410BCE\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/5410BCE/NH/Miyake21_Bristlecone.csv\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/5410BCE/NH/Miyake21_Finland1.csv\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/5410BCE/NH/Miyake21_Finland2.csv\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/5410BCE/NH/Miyake21_Switzerland.csv\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/5410BCE/NH\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/660BCE\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/660BCE/NH/Sakurai20_CedarEw.csv\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/660BCE/NH/Sakurai20_CedarLw.csv\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/660BCE/NH\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/7176BCE\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/7176BCE/NH/Brehm21_AlpineLarch.csv\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/7176BCE/NH/Brehm21_GermanOak.csv\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/7176BCE/NH/Brehm21_USABristlecone.csv\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/7176BCE/NH\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/NH/Büntgen18_ALT01.csv\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/NH/Büntgen18_AUT02.csv\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/NH/Büntgen18_CAN06.csv\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/NH/Büntgen18_CHN01.csv\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/NH/Büntgen18_GER01.csv\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/NH/Büntgen18_GER07.csv\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/NH/Büntgen18_GRE02.csv\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/NH/Büntgen18_JAP01.csv\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/NH/Büntgen18_MON03.csv\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/NH/Büntgen18_MON09.csv\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/NH/Büntgen18_PAK04.csv\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/NH/Büntgen18_RUS04.csv\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/NH/Büntgen18_RUS15.csv\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/NH/Büntgen18_RUS17.csv\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/NH/Büntgen18_RUS20.csv\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/NH/Büntgen18_SUI01.csv\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/NH/Büntgen18_SWE02.csv\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/NH/Büntgen18_SWE05.csv\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/NH/Büntgen18_TIB01.csv\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/NH/Büntgen18_USA02.csv\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/NH/Büntgen18_USA11.csv\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/NH/Büntgen18_USA18.csv\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/NH/Miyake12_Cedar.csv\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/NH\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/SH/Büntgen18_DAR01.csv\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/SH/Büntgen18_DAR06.csv\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/SH/Büntgen18_DAR07.csv\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/SH/Büntgen18_PAT02.csv\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/SH/Büntgen18_PAT03.csv\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/SH/Büntgen18_TAS01.csv\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/775AD/SH\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/993AD\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/993AD/NH/Büntgen18_ALT02.csv\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/993AD/NH/Büntgen18_CHI01.csv\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/993AD/NH/Büntgen18_MON05.csv\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/993AD/NH/Büntgen18_SWE01.csv\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/993AD/NH/Büntgen18_SWE02.csv\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/993AD/NH/Büntgen18_SWE03.csv\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/993AD/NH/Büntgen18_SWE04.csv\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/993AD/NH\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/993AD/SH/Büntgen18_DAR01.csv\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/993AD/SH/Büntgen18_PAT03.csv\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/datasets/993AD/SH\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/models/Brehm21.hd5\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/models/Buntgen18.hd5\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/models/Guttler14.hd5\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/models/Miyake17.hd5\n",
-      "/home/jordan/Documents/Introductory_Julia/Julia ODEs/models\n"
-     ]
+     "data": {
+      "text/plain": [
+       "get_assets"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "home_directory = pwd()  # Getting the current working directory \n",
+    "\"\"\"\n",
+    "get_assets() uses the current working directory to retrieve the datasets (.csv) and models (.hd5) assumed to be in folders with those names.\n",
+    "\"\"\"\n",
+    "function get_assets()::Tuple{Vector{String}, Vector{String}}\n",
+    "    models = Vector{String}(undef, 0)       # An array to house the file address of the models \n",
+    "    datasets = Vector{String}(undef, 0)     # An array to store the dataset file addresses \n",
+    "    miscellaneous = Vector{String}(undef, 0)# An array for other files\n",
     "\n",
-    "for (root, dirs, files) in walkdir(pwd())\n",
-    "    if root \n",
-    "    for file in files\n",
-    "        file = string(root, \"/\", file)\n",
-    "        print(file, \"\\n\")\n",
+    "    for (root, dirs, files) in walkdir(pwd())   # Walking through the working directory \n",
+    "        storage_array = miscellaneous\n",
+    "        if occursin(\"models\", root) # If the root path contains \"models\" appending to models array\n",
+    "            storage_array = models  \n",
+    "        elseif occursin(\"datasets\", root)   # If the root path contains \"datasets\" appending to datasets\n",
+    "            storage_array = datasets\n",
+    "        end\n",
+    "\n",
+    "        for file in files   # Looping over files in the directory \n",
+    "            file = string(root, \"/\", file)  # Formatting file as a filepath \n",
+    "            push!(storage_array, file)  # Appending to the correct array \n",
+    "        end\n",
     "    end\n",
-    "    print(root, \"\\n\")\n",
-    "end\n"
+    "    return models, datasets\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "models, datasets = get_assets();"
    ]
   },
   {
