`production` draft based on `simple_sinusoid` from ticktack

--- a/Julia ODEs/julia_odes.ipynb
+++ b/Julia ODEs/julia_odes.ipynb
@@ -68,25 +68,26 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### `get_derivative`: \n",
-    " - This function will loads the derivative function from a `.hd5` file. \n",
-    "     - Parameters:\n",
-    "         - `model: str` The name of the model that is to be used. \n",
-    "     - Returns:\n",
-    "         - `Function` The entire model is summarised by the derivative since it is an ode. So I want to return the derivative as a function of parameters. I have decided that the binning will automatically occur within this function based on the hemisphere loaded from the `.hd5` file. I need to check this against `ticktack`"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\" \n",
+    "This function will loads the derivative function from a `.hd5` file. \n",
+    "\n",
+    "Parameters:\n",
+    " - `model: str` The name of the model that is to be used. \n",
+    "\n",
+    " Returns:\n",
+    " - `Function` The entire model is summarised by the derivative since it is an ode. So I want to return the derivative as a function of parameters. I have decided that the binning will automatically occur within this function based on the hemisphere loaded from the `.hd5` file. I need to check this against `ticktack`\n",
+    "\"\"\"\n",
     "function get_derivative(model_file_name::String)::Function\n",
-    "    local hd5 = h5open(model_file_name);                      # Opening the HDF5 file\n",
+    "    #! I need to get better variable names for this function \n",
+    "    #! I also need to make a list of the equilibrium steady_state_productions using python.\n",
+    "        #? I could do this using pycall and ticktack but I think not. Since it is intrinsic to the model we could add it to the hd5 files.\n",
+    "    \n",
+    "    local hd5 = h5open(model_file_name);                # Opening the HDF5 file\n",
     "    local F = hd5[\"fluxes\"][1:end, 1:end];              # Retrieving the flux matrix \n",
     "    local P = hd5[\"production coefficients\"][1:end];    # Retrieving the production prjection \n",
     "    local N = hd5[\"reservoir content\"][1:end, 1:end];   # The C14 reserviour contents \n",
@@ -96,13 +97,30 @@
     "    local F = transpose(F) ./ N;                                      # The proportion flux\n",
     "    local T = transpose(F) - Diagonal(vec(sum(F, dims=2))) - λ;# Construncting the transfer operator\n",
     "\n",
-    "    function production(t, p):\n",
-    "        # Need to go to ticktack and get the simple_sinusoid function moved into this implementation\n",
-    "        return p[1] * (1 + p[2] * sin(2 * π / 11* t + p[4])) + p[5] * exp(- (p[6] * (t - p[7])) ^ 16); \n",
+    "    local U = T \\ (- 1.88 * P);  # Equilibriating the system\n",
+    "    \"\"\"\n",
+    "    The production function of Carbon 14. There are two components; the steady state sinusoidal production based on the Schwabe cycle, and the super-gaussian Miyake event.\n",
+    "\n",
+    "    Parameters:\n",
+    "     - t::Float64: The time in years.\n",
+    "     - p::Vector{Float64}: The parameters of the model. \n",
+    "\n",
+    "    Returns:\n",
+    "     - Vector{Float64}: The Carbon 14 production of each box of the model\n",
+    "    \"\"\"\n",
+    "    function production(time::Vector{Float64}, parameters::Vector{Float64})::Vector{Float64}\n",
+    "        local ϕ = parameters[4];    # Phase of the sinusoid \n",
+    "        local middle = parameters[1] + parameters[2] / 2;   # Center of the super-gaussian  \n",
+    "        local height = parameters[3] / parameters[2];       # Amplitude of the super-gaussian\n",
+    "        local duration = 0.5167531366915398 * parameters[2];# Numeric factor controlling width\n",
+    "\n",
+    "        local sine = U + 0.18U * sin(2π / 11 * time + ϕ);   # Sinusoidal production components  \n",
+    "        local gauss = height * exp(- ((time - middle) / duration) ^ 16.);   # event\n",
+    "        return sine + gauss\n",
     "    end\n",
     "\n",
     "    return function derivative(x, p, t)\n",
-    "        return vec(TO * x + production(t, p) * P);  \n",
+    "        return vec(T * x + production(t, p) * P);  \n",
     "    end\n",
     "end"
    ]
