The `derivative` function

--- a/Julia ODEs/julia_odes.ipynb
+++ b/Julia ODEs/julia_odes.ipynb
@@ -60,18 +60,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "models, datasets = get_assets();"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "get_derivative"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "\"\"\" \n",
     "This function will loads the derivative function from a `.hd5` file. \n",
@@ -97,7 +98,7 @@
     "    local F = transpose(F) ./ N;                                      # The proportion flux\n",
     "    local T = transpose(F) - Diagonal(vec(sum(F, dims=2))) - λ;# Construncting the transfer operator\n",
     "\n",
-    "    local U = T \\ (- 1.88 * P);  # Equilibriating the system\n",
+    "\n",
     "    \"\"\"\n",
     "    The production function of Carbon 14. There are two components; the steady state sinusoidal production based on the Schwabe cycle, and the super-gaussian Miyake event.\n",
     "\n",
@@ -114,15 +115,37 @@
     "        local height = parameters[3] / parameters[2];       # Amplitude of the super-gaussian\n",
     "        local duration = 0.5167531366915398 * parameters[2];# Numeric factor controlling width\n",
     "\n",
-    "        local sine = U + 0.18U * sin(2π / 11 * time + ϕ);   # Sinusoidal production components  \n",
+    "        #! Currently set for guttler\n",
+    "        local sine = 1.88 + 0.18 * 1.88 * sin(2π / 11 * time + ϕ);   # Sinusoidal production components  \n",
     "        local gauss = height * exp(- ((time - middle) / duration) ^ 16.);   # event\n",
     "        return sine + gauss\n",
     "    end\n",
     "\n",
-    "    return function derivative(x, p, t)\n",
-    "        return vec(T * x + production(t, p) * P);  \n",
+    "    \"\"\"\n",
+    "    The ODE model of the earth system. \n",
+    "\n",
+    "    Parameters:\n",
+    "     - position::Vector{Float64}: The current position of the system \n",
+    "     - parameters::Vector{Float64}: The parameters of the production function/Miyake event\n",
+    "     - time::Vector{Float64}: The current year\n",
+    "    Returns:\n",
+    "     - Function: The derivative function of the system\n",
+    "    \"\"\"\n",
+    "    function derivative(position, parameters, time)::Vector{Float64}\n",
+    "        return T * position + production(time, parameters) * P;  \n",
     "    end\n",
+    "    return derivative\n",
     "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "models, datasets = get_assets();\n",
+    "derivative = get_derivative(models[3]);"
    ]
   },
   {
