--- a/Python IR/get_template.ipynb
+++ b/Python IR/get_template.ipynb
@@ -3,12 +3,125 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Get_Template: \n",
+    "This script constructs a very simple `template` of a miyake event. The sinusoidal component of the production function is ignored resulting in a smooth curve. The template is constructed using the best fitting `model`-`dataset` pair  from the 774AD year. `emcee` is used to fit the parameters of the production function which is then used to generate the `.csv` file containing the `dc14` concentrations over just the event."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from os import walk, getcwd\n",
+    "# from ticktack.fitting import SingleFitter\n",
+    "from math import exp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "models = { # This dictionary contains the units for the fluxes and production function\n",
+    "    \"Guttler14\": {  # Units of the Guttler 2014 paper\n",
+    "        \"production_rate_units\": \"atoms/cm^2/s\",    # Units of the production rate \n",
+    "        \"flow_rate_units\": \"Gt/yr\"                  # Units of the fluxes\n",
+    "    },\n",
+    "    \"Brehm21\": {    # Units used by the Brehm, et. al. paper\n",
+    "        \"production_rate_units\": \"kg/yr\",    # Units of the production rate\n",
+    "        \"flow_rate_units\": \"Gt/yr\"           # Units of the fluxes\n",
+    "    },\n",
+    "    \"Buntgen18\": {  # The units used by the Buntgen 2018 paper\n",
+    "        \"production_rate_units\": \"atoms/cm^2/s\",    # Units of the production function\n",
+    "        \"flow_rate_units\": \"Gt/yr\"                  # Units of the fluxes \n",
+    "    },\n",
+    "    \"Miyake17\": {   # The units used by the Miyake 2017 et. al. paper\n",
+    "        \"production_rate_units\": \"atoms/cm^2/s\",    # Units of the production function \n",
+    "        \"flow_rate_units\": \"1/yr\"                   # Units of the fluxes.\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_sets = []  # List for storing the data set locations\n",
+    "data_sets_directory = f\"{getcwd()}/datasets/775AD\" # Home directory of the data \n",
+    "for (root, dirs, files) in walk(data_sets_directory):    # Looping over directories \n",
+    "    for file in files:  # Looping through the files \n",
+    "        file_path = root + \"/\" + file   # Setting up the path \n",
+    "        data_sets.append(file_path)  # Extending the stored directoriess"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def production_function(time, *parameters):\n",
+    "    \"\"\"\n",
+    "    Given the time and parameters of the production function. Generates the total production of carbon 14 at that time using a linear model and a super-gaussian pulse. \n",
+    "    Parameters:\n",
+    "        time: float -> The time in years.\n",
+    "        parameters: tuple -> The parameters of the production function. In this case, steady state, long term trend, middle, duration and amplitude.\n",
+    "    Returns:\n",
+    "        float -> The carbon 14 production at time.\n",
+    "    \"\"\"\n",
+    "    const, lin_coeff, center, duration, amplitude = args\n",
+    "    super_gaussian = amplitude * exp(((time - center) / (duration / 2)) ** 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_model(model: str, datum: str):\n",
+    "    \"\"\"\n",
+    "    Using a `ticktack.SingleFitter` this function compiles the model and selects the appropriate production function.\n",
+    "    \"\"\"\n",
+    "    cbm = ticktack.load_presaved_model( # Generating the CarbobBoxModel using ticktack\n",
+    "        model,  # Name of the model as looped from the models dictionary \n",
+    "        production_rate_units=models[model][\"production_rate_units\"], \n",
+    "        flow_rate_units=models[model][\"flow_rate_units\"]\n",
+    "    )\n",
+    "\n",
+    "    bayesian_model = ticktack.fitting.SingleFitter(cbm)   # Fitting a model \n",
+    "    bayesian_model.prepare_function(model=\"simple_sinusoid\")# Generating the simple sin model\n",
+    "    bayesian_model.load_data(datum)   # Loading the data into the model  \n",
+    "\n",
+    "    return bayesian_model"
+   ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "0c4d728f571dc14aecd61e9c5a335d0795680d56501238c7b0344daa2ef0c43f"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.8.12 64-bit ('ticktack': conda)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.12"
   },
   "orig_nbformat": 4
  },
