Complete `production_function`

--- a/Python IR/get_template.ipynb
+++ b/Python IR/get_template.ipynb
@@ -74,8 +74,10 @@
     "    Returns:\n",
     "        float -> The carbon 14 production at time.\n",
     "    \"\"\"\n",
-    "    const, lin_coeff, center, duration, amplitude = args\n",
-    "    super_gaussian = amplitude * exp(((time - center) / (duration / 2)) ** 4)"
+    "    const, lin_coeff, center, duration, amplitude = parameters\n",
+    "    super_gaussian = amplitude * exp(((time - center) / (duration / 2)) ** 8)\n",
+    "    long_term_trend = const + lin_coeff * time\n",
+    "    return super_gaussian + long_term_trend"
    ]
   },
   {
