Reducing to single model for template construction

--- a/Python IR/get_template.ipynb
+++ b/Python IR/get_template.ipynb
@@ -10,12 +10,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "from os import walk, getcwd\n",
-    "# from ticktack.fitting import SingleFitter\n",
+    "from ticktack.fitting import SingleFitter, MultiFitter\n",
+    "from ticktack import load_presaved_model\n",
     "from math import exp"
    ]
   },
@@ -29,18 +30,6 @@
     "    \"Guttler14\": {  # Units of the Guttler 2014 paper\n",
     "        \"production_rate_units\": \"atoms/cm^2/s\",    # Units of the production rate \n",
     "        \"flow_rate_units\": \"Gt/yr\"                  # Units of the fluxes\n",
-    "    },\n",
-    "    \"Brehm21\": {    # Units used by the Brehm, et. al. paper\n",
-    "        \"production_rate_units\": \"kg/yr\",    # Units of the production rate\n",
-    "        \"flow_rate_units\": \"Gt/yr\"           # Units of the fluxes\n",
-    "    },\n",
-    "    \"Buntgen18\": {  # The units used by the Buntgen 2018 paper\n",
-    "        \"production_rate_units\": \"atoms/cm^2/s\",    # Units of the production function\n",
-    "        \"flow_rate_units\": \"Gt/yr\"                  # Units of the fluxes \n",
-    "    },\n",
-    "    \"Miyake17\": {   # The units used by the Miyake 2017 et. al. paper\n",
-    "        \"production_rate_units\": \"atoms/cm^2/s\",    # Units of the production function \n",
-    "        \"flow_rate_units\": \"1/yr\"                   # Units of the fluxes.\n",
     "    }\n",
     "}"
    ]
@@ -90,18 +79,25 @@
     "    \"\"\"\n",
     "    Using a `ticktack.SingleFitter` this function compiles the model and selects the appropriate production function.\n",
     "    \"\"\"\n",
-    "    cbm = ticktack.load_presaved_model( # Generating the CarbobBoxModel using ticktack\n",
+    "    cbm = load_presaved_model( # Generating the CarbobBoxModel using ticktack\n",
     "        model,  # Name of the model as looped from the models dictionary \n",
     "        production_rate_units=models[model][\"production_rate_units\"], \n",
     "        flow_rate_units=models[model][\"flow_rate_units\"]\n",
     "    )\n",
     "\n",
-    "    bayesian_model = ticktack.fitting.SingleFitter(cbm)   # Fitting a model \n",
-    "    bayesian_model.prepare_function(model=\"simple_sinusoid\")# Generating the simple sin model\n",
+    "    bayesian_model = SingleFitter(cbm)   # Fitting a model \n",
+    "    bayesian_model.prepare_function(production_function)    # Generating the simple sin model\n",
     "    bayesian_model.load_data(datum)   # Loading the data into the model  \n",
     "\n",
     "    return bayesian_model"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
